@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.327 2002-12-19 21:47:54 castaglia Exp $
+$Id: NEWS,v 1.328 2002-12-26 20:18:24 castaglia Exp $
 
 CVS
 ---------------------------------
@@ -70,6 +70,9 @@ CVS
   For consistency, mod_unixpw.c has been renamed to mod_auth_unix (and now
   has a --disable-auth-unix configure option), and mod_pam.c has been renamed
   to mod_auth_pam.c (with an explicit --enable-auth-pam configure option).
+- Bug 1900 - ftpwho's output on uploads.  ftpwho now reports "n/a" rather than
+  "0%" on uploads, for the server does not know how large of a file is being
+  uploaded in advance, and cannot determine a "percentage done" value.
 
 1.2.7 - Released 05-12-2002
 ---------------------------------
